fixed grayBox image alignment

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -27,6 +27,7 @@ font-size:13pt;
 	background-image:url('/images/aboutContent.jpg');
 	background-repeat:no-repeat;
 	margin-left:100px;
+	text-align:center;
 	margin-top:25px;
 	width: 800px;
 	height: 360px;
@@ -66,6 +67,7 @@ border:none;
 	font-size: 1.2em;
 	color:maroon;
 }
+
 
 /* Main tools page graphics */
 
@@ -156,7 +158,7 @@ background-color:white;
 	margin-left:48px;
 	padding-left: 2px;
 	width: 200px;
-	float:left;	
+	float:left;
 }
 
 
@@ -384,6 +386,7 @@ padding:.9em;
 .grayBox img{
 padding:15px;
 border:none;
+float:left;
 }
 
 #innerContentColumn img .noBorder{
